@startuml

title __V2's Class Diagram__\n

  namespace com.itbird.design {
    namespace iterator {
      namespace demo.v2 {
        class com.itbird.design.iterator.demo.v2.Client {
            + main()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace iterator {
      namespace demo.v2 {
        class com.itbird.design.iterator.demo.v2.WordInfo {
            ~ title : String
            + getNode()
            + getTitle()
            + setNode()
            + setTitle()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace iterator {
      namespace demo.v2 {
        class com.itbird.design.iterator.demo.v2.WordInfo.Node {
            ~ content : String
            ~ lineNum : int
            + getContent()
            + getLineNum()
            + getNext()
            + setContent()
            + setLineNum()
            + setNext()
        }
      }
    }
  }
  

  com.itbird.design.iterator.demo.v2.WordInfo o-- com.itbird.design.iterator.demo.v2.WordInfo.Node : node
  com.itbird.design.iterator.demo.v2.WordInfo +-down- com.itbird.design.iterator.demo.v2.WordInfo.Node
  com.itbird.design.iterator.demo.v2.WordInfo.Node o-- com.itbird.design.iterator.demo.v2.WordInfo.Node : next


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
